<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="15dp"
    android:scrollbars="none">

<com.google.android.material.chip.ChipGroup
    android:id="@+id/chipGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:singleSelection="true"
    android:paddingEnd="15dp"
    app:selectionRequired="true"
    app:singleLine="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipAll"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:checked="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipEncrypted"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipDecrypted"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypted" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipPrivate"
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_file" />

</com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>
