<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:layout_marginHorizontal="15dp"
    android:orientation="horizontal"
    android:paddingVertical="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/file_icon" />

    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:maxLines="2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMetadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_metadata"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:backgroundTint="@color/transparent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_icon"
        android:src="@drawable/ic_more_vert_24px"
        app:tint="@color/black" />

</LinearLayout>